# native-canvas

./: .gitignore  .gitmodules  LiCENSE  README.md  deploy.sh  package.json  tsconfig.json
ext/SDL2/test/: testfile.c
ext/SDL2_gfx/: CMakeLists.txt
samples/: alert-and-confirm-example.js  bouncing-ball-example.js  circle-example.js  clip-example.js  clock-example.js  clock-example2.js  cubic-bezier-curve-example.js  document-example.js  draw-image-example.js  draw-image-example2.js  file-drop-example.js  filled-rect-example.js  focus-example.js  fullscreen.js  get-image-data-example.js  keypress-example.js  keyup-example.js  line-example.js  lineOffsetExample.js  looping-panorama-example.js  mouse-move-example.js  phaser.js  polygon-example.js  put-image-data-example.js  simple-bounce.js  simple-game.js  solar-system.js  spark.js  trailing-bouncing-ball-example.js  window-resize.js
src/: index.ts
src/dom/: document.ts  native-canvas.ts  native-context.ts
src/engine/: index.ts
src/engine/sdl/: index.ts
src/engine/sdl/app/: application-context.ts  application-frame-manager.ts
src/engine/sdl/canvas/: sdl-canvas.ts  sdl-context.ts
src/engine/sdl/color/: rgba.ts
src/engine/sdl/document/: sdl-document.ts
src/engine/sdl/event/: key-event.ts  mouse-event.ts
src/engine/sdl/performance/: sdl-performance.ts
src/engine/sdl/sdl-context/: index.ts  sdl-context-2d.ts  sdl-renderer.ts  sdl-texture.ts
src/image/: image.ts
src/node/: global.ts  index.ts
src/nodejs/: global.ts  index.ts
src/window/: native-window.ts  window-options.ts
(+96 files in other folders)
